# koreader-base

./: Makefile  Makefile.defs  cache-key.android-launcher
.circleci/: config.yml
.github/workflows/: build.jobs  build.matrix.yml  build.prepare.sh  build.yml  build_matrix.yml
cmake/: CMakeLists.txt
cmake/crengine/: CMakeLists.txt
cmake/koreader/: CMakeLists.txt
ffi/: kotasync.lua  mupdf.lua  mupdf_h.lua  posix_h.lua  xxhash_h.lua  xz_h.lua
ffi-cdecl/: ffi-cdecl.lua  posix_cdecl.c  posix_h_android_arm.lua  posix_h_android_arm64.lua  posix_h_android_x64.lua  posix_h_android_x86.lua  posix_h_linux_arm.lua  posix_h_linux_arm64.lua  posix_h_linux_x64.lua  posix_h_macos.lua  wrap-mupdf_cdecl.c  xxhash_cdecl.c  xz_cdecl.c
ffi-cdecl/appimage/: Makefile
kotasync/: Makefile
spec/unit/: turbo_spec.lua  util_spec.lua
test-runner/: busted_config.lua  meson.build  runtests
toolchain/: Makefile
utils/: bininfo.py
